force-app/main/default/objects/Localization__mdt/Localization__mdt.object-meta.xml
<CustomObject>
    <description>Translated labels in the mobile app for unsupporeted language</description>
    <label>Survey Mobile App Localization</label>
    <pluralLabel>Localizations</pluralLabel>
</CustomObject>