force-app/main/default/objects/Localization__mdt/fields/OriginalName__c.field-meta.xml
<CustomField>
    <fullName>OriginalName__c</fullName>
    <label>Original Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>