force-app/main/default/objects/Localization__mdt/fields/TranslatedLabel__c.field-meta.xml
<CustomField>
    <fullName>TranslatedLabel__c</fullName>
    <label>Translated Label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>