force-app/main/default/objects/Localization__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>Locale__c</columns>
    <columns>Type__c</columns>
    <columns>OriginalName__c</columns>
    <columns>TranslatedLabel__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>